Fix merge compilation issues from main
- Fixed SqlEnhancerEngine ASYNC block that had incorrect merge conflict resolution
- Reverted Java 21 requirements to Java 17 for compatibility
- Replaced Thread.ofVirtual() with platform threads in xa-pool-commons
- All modules now compile successfully

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>